samples/_failures_safe/1761527747_db8e19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73e59e97.c: In function ‘tokenize’:
./samples/SAFE/__tmp_73e59e97.c:167:13: error: expected expression at end of input
  167 |             tokens[
      |             ^~~~~~
./samples/SAFE/__tmp_73e59e97.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73e59e97.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73e59e97.c:167:13: error: expected declaration or statement at end of input
